--- a/public/assets/css/install.css
+++ b/public/assets/css/install.css
@@ -49,7 +49,7 @@ body {
     z-index: 1;
 }
 .steps li>a.done:before, .steps>ul li>a.selected:before {
-    border-color: #6777ef;
+    border-color: #2c3c93;
 }
 
 .steps>ul li>a.selected.error:before {
@@ -57,8 +57,8 @@ body {
 }
 
 .steps>ul li>a.selected .stepNumber {
-    border-color: #6777ef;
-    background-color: #6777ef;
+    border-color: #2c3c93;
+    background-color: #2c3c93;
     color: #fff;
 }
 .steps>ul .stepNumber {
@@ -109,8 +109,8 @@ body {
 
 .steps ul li>a.done .stepNumber,
 .steps>ul li:last-child>a.selected .stepNumber {
-    border-color: #6777ef;
-    background-color: #6777ef;
+    border-color: #2c3c93;
+    background-color: #2c3c93;
     color: #fff;
     text-indent: -9999px;
 }
@@ -153,12 +153,12 @@ body {
 
 .btn-orange {
     color: #fff;
-    background-color: #6777ef;
+    background-color: #2c3c93;
 }
 
 .btn-orange:hover, .btn-orange:active, .btn-orange:focus {
     color: #fff;
-    background-color: #6777ef;
+    background-color: #2c3c93;
 }
 
 .label-default {
